--- a/angular.json
+++ b/angular.json
@@ -1,5 +1,6 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "deploy": "ng build --prod --base-href=/angular-ci-cd/",
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
